<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_circle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="example.android.colors.Circle">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium_small"
            android:text="@string/company_name"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/main_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_medium_small"
            android:text="@string/company_description"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/side_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium_small">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:alpha="0.6"
                    android:contentDescription="@string/circle"
                    android:paddingBottom="@dimen/padding_circle"
                    android:paddingStart="@dimen/padding_circle"
                    android:src="@drawable/red" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:alpha="0.6"
                    android:contentDescription="@string/circle"
                    android:paddingBottom="@dimen/padding_circle"
                    android:paddingEnd="@dimen/padding_circle"
                    android:src="@drawable/picgreen" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:alpha="0.6"
                    android:contentDescription="@string/circle"
                    android:src="@drawable/blue" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:paddingTop="@dimen/padding_medium_small">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/small_circle_layout"
                    android:layout_weight="1"
                    android:contentDescription="@string/circle"
                    android:src="@drawable/picgreen"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_small"
                    android:text="@string/address"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="@dimen/small_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/small_circle_layout"
                    android:layout_weight="1"
                    android:contentDescription="@string/circle"
                    android:src="@drawable/blue"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_small"
                    android:text="@string/opening_hours"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/small_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/small_circle_layout"
                    android:layout_weight="1"
                    android:contentDescription="@string/circle"
                    android:src="@drawable/red" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_small"
                    android:text="@string/phone"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="@dimen/small_text" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
